--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<DOCTYPE=html>
+<div class="loader">
+    <div class="stripe"></div>
+    <div class="stripe"></div>
+    <div class="stripe"></div>
+    <div class="stripe"></div>
+    
+    <div class="claim">
+      <span>Loading</span>
+      <span>Cool</span>
+      <span>Things..</span>
+    </div>
+  </div>
+  
+  <div class="page">
+    Yay! Here you are!
+  </div>
